# hermes-trading

./: .env  .gitignore  Dockerfile  pyproject.toml
hermes_trading/: __init__.py  dashboard.py  loop.py  reflect.py  run.py  score.py
hermes_trading/adapters/: macro.py  news.py  onchain.py  price.py
state/: goal.yaml  strategy.yaml
state/trackb/: goal.yaml  strategy.yaml
