[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-trading"
version = "0.1.0"
description = "Self-improving trading agent"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "flask>=2.3.0",
    "yfinance>=0.2.0",
    "alpaca-py>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hermes-trading = "hermes_trading.run:main"
